Fix vertical alignment in groups, add TODO with immediate action points to unblock stuff

--- a/index.css
+++ b/index.css
@@ -386,7 +386,7 @@ button {
 }
 .group {
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: wrap;
 }
 .group--block {
