--- a/stylesheets/components/group.css
+++ b/stylesheets/components/group.css
@@ -1,6 +1,6 @@
 .group {
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: wrap;
 }
 
